// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuredNavivator should navigate to home page when auth token validation fails 1`] = `
<div>
  <div
    data-testid="navigator"
  >
    Navigator
  </div>
</div>
`;

exports[`SecuredNavivator should render child when token validation is successful 1`] = `
<div>
  <div
    data-testid="child"
  >
    Child component
  </div>
</div>
`;
